--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   persistent_bottom_nav_bar_v2: ^4.2.3
   flutter_smart_dialog: ^4.5.3+2
+  flutter_svg: ^1.1.1
+  keyboard_actions: ^4.0.1
 
   http: ^0.13.4
 
@@ -54,10 +56,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  ### Temorary packages
+  drift: ^1.7.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  drift_dev: ^1.7.0
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
