--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_smart_dialog: ^4.5.3+2
   flutter_svg: ^1.1.1
   keyboard_actions: ^4.0.1
+  syncfusion_flutter_sliders: ^20.2.36
 
   http: ^0.13.4
 
