--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: 
+    sdk: flutter         
 
 
   #UI
@@ -43,6 +45,8 @@ dependencies:
   flutter_svg: ^1.1.1
   keyboard_actions: ^4.0.1
   syncfusion_flutter_sliders: ^20.2.36
+  dash_chat_2: ^0.0.11
+
 
   http: ^0.13.4
 
@@ -79,6 +83,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -88,6 +93,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/city/
+    - assets/car/
+    - assets/icon/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
