--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_localizations: 
-    sdk: flutter         
+    sdk: flutter     
+
+    #parse server
+  parse_server_sdk_flutter: ^3.1.3    
 
 
   #UI
