--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
 
   http: ^0.13.4
   dio: ^4.0.6
+  url_launcher: ^6.1.5
+  cached_network_image: ^3.2.1
 
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
