--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   syncfusion_flutter_sliders: ^20.2.36
   dash_chat_2: ^0.0.11
 
+  #Geolocator
+  geolocator: ^9.0.1
+
 
   http: ^0.13.4
   dio: ^4.0.6
@@ -70,6 +73,10 @@ dependencies:
   ### Temorary packages
   drift: ^1.7.0
   uuid: ^3.0.6
+
+  #Google
+  google_maps_flutter: ^2.1.11
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
