--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
     sdk: flutter     
 
     #parse server
-  parse_server_sdk_flutter: ^3.1.3    
+  parse_server_sdk_flutter: ^3.1.3
+
+  dropdown_search: ^0.6.3
 
 
   #UI
