--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
     #parse server
   parse_server_sdk_flutter: ^3.1.3
 
-  dropdown_search: ^0.6.3
+  dropdown_search2: ^1.0.2
 
 
   #UI
