--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
   flutter_secure_storage: ^5.0.2
+  shared_preferences: ^2.0.15
   hive: ^2.2.2
   path_provider: ^2.0.11
   cupertino_icons: ^1.0.2
