--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_analytics: ^8.3.4
   firebase_messaging: ^11.2.5
+  firebase_dynamic_links: ^2.0.1
   #Rating
   flutter_rating_bar: ^4.0.1
   #WebView
@@ -65,6 +66,7 @@ dependencies:
   apple_sign_in_safety: ^0.0.6
   pinput: ^2.2.12
   masked_text_field: ^1.0.1
+  uni_links: ^0.5.1
   #share
   share_plus: ^4.1.0
 
