--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,7 +43,12 @@
 		<string>vkauthorize</string>
 		<string>sms</string>
 		<string>tel</string>
+		<string>https</string>
 	</array>
+	<key>FirebaseDynamicLinksCustomDomains</key>
+		<array>
+			<string>https://apppoezdka.page.link</string>
+		</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
