--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+       android:name="com.google.firebase.messaging.default_notification_icon"
+       android:resource="@drawable/ic_stat_name"
+       />
         <activity android:name="com.vk.sdk.VKServiceActivity"
     android:label="ServiceActivity"
     android:theme="@style/VK.Transparent" />
